# mayhemCpp

./: CMakeLists.txt  README.md  test.cpp
include/: pch.h  window.hpp
src/: pch.cpp  window.cpp
